cmake_minimum_required(VERSION 3.10)
project(bsp)
add_executable(bsp bsp.c)
target_include_directories(bsp PRIVATE third_party)
if(WIN32)
    # Windows specific options (libm is not needed)
else()
    # Linux and other UNIX-like systems
    target_link_libraries(bsp m)
    target_link_options(bsp PRIVATE -static)
endif()
